# Paranal_Vibration_Monitoring

./: get_latest_data.sh  mn2_dashboard_functions.py  mn2_streamlit_dashboad.py  pyproject.toml  readme.md  requirements.txt
reference_psds/UT1/: 2023-04_UT1_non-operations_allFoci_m1-3_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m1-7_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m1_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m2_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m3_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m4-7_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m4_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m5_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m6_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_m7_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_sensor_10_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_sensor_11_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_sensor_12_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_sensor_1_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_sensor_2_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_sensor_3_psd_distribution_features.csv  2023-04_UT1_non-operations_allFoci_sensor_5_psd_distribution_features.csv  (+67 more)
test_data/: ldlvib1_raw_2023-01-13.hdf5  ldlvib2_raw_2023-01-13.hdf5  ldlvib3_raw_2023-01-13.hdf5  ldlvib4_raw_2023-01-13.hdf5
(+358 files in other folders)
